<resources>
    <string name="app_name">mode_fridge</string>
    <string name="button_setting">设置</string>
    <string name="text_frist_chat">主人你好！\n我的名字叫小小鲜，很高兴认识您！\n我饿了，快放满食物喂饱我吧！</string>
    <string name="button_model_holiday">假日模式</string>
    <string name="button_model_smart">智能模式</string>
    <string name="button_one_key_clean">一键净化</string>
    <string name="text_quick_cooling">速冷</string>
    <string name="text_quick_freeze">速冻</string>
    <string name="text_iced_drink">冰饮</string>
    <string name="text_filter_status">滤芯状态</string>
    <string name="button_ok">确认</string>
    <string name="button_cancel">取消</string>
    <string name="text_confirm_filter_reset">确认已更好全新的滤芯，并初始化滤芯寿命吗？</string>
    <string name="text_cold_closet">冷藏室</string>
    <string name="text_temp_changeable_room">变温室</string>
    <string name="text_freezing_room">冷冻室</string>
    <string name="button_current_temp">当前温度：</string>
    <string name="text_need_alter_filter">需要更换滤芯</string>
    <string name="switch_button_on">开</string>
    <string name="switch_button_off">关</string>
    <string name="button_cleanning">净化中</string>
    <string name="text_scene_cc">冷藏</string>
    <string name="text_scene_freeze">冷冻</string>
    <string name="text_scene_rtc">软冷冻</string>
    <string name="text_scene_unfreeze">解冻</string>
    <string name="text_scene_beef">肉类</string>
    <string name="text_scene_dry_cargo">干货</string>
    <string name="text_scene_vegetable">蔬菜</string>
    <string name="text_scene_fruit">水果</string>
    <string name="text_scene_ort">剩菜</string>
    <string name="text_scene_egg">鸡蛋</string>
    <string name="text_scene_ice_beer">冰啤</string>
    <string name="text_scene_fresh_beer">鲜啤</string>
    <string name="text_scene_warm_beer">暖啤</string>
    <string name="text_scene_more">更多</string>
    <string name="text_scene_custom">自定义</string>
    <string name="text_scene_fish">鱼</string>
    <string name="text_scene_tea">茶叶</string>
    <string name="text_scene_mask">面膜</string>
    <string name="text_scene_ice_cream">雪糕</string>
    <string name="text_scene_breast_milk">母乳</string>
    <string name="title_filter_status">滤芯状态</string>
    <string name="toast_set_fail">设置失败，请重新设置</string>
    <string name="toast_commodity_inspection_running">商检中，不能修改设置</string>
    <string name="text_stream_music">媒体音量</string>
    <string name="text_error_traffic">通信故障</string>
    <string name="text_error_ccroom_sencor">冷藏室传感器故障</string>
    <string name="text_error_tcroom_sencor">变温室传感器故障</string>
    <string name="text_error_fzroom_sencor">冷冻室传感器故障</string>
    <string name="text_error_cc_defrost_sencor">冷藏化霜传感器故障</string>
    <string name="text_error_fz_defrost_sencor">冷冻化霜传感器故障</string>
    <string name="text_error_indoor_sencor">环境温度传感器故障</string>
    <string name="text_error_air_door">风门故障</string>
    <string name="text_error_ccroom_fan">冷藏风扇故障</string>
    <string name="text_error_tcroom_fan">冷凝风扇故障</string>
    <string name="text_error_fzroom_fan">冷冻风扇故障</string>
    <string name="text_scene_cc_desc">冷藏既不会冻坏也能保鲜时间最长</string>
    <string name="text_scene_freeze_desc">冷冻状态</string>
    <string name="text_scene_rtc_desc">将食物进行软冷冻储存，保证食物营养不流失,也不会冻结</string>
    <string name="text_scene_unfreeze_desc">将食物解冻</string>
    <string name="text_scene_beef_desc">保障肉类新鲜的口感</string>
    <string name="text_scene_dry_cargo_desc">防止干货受潮</string>
    <string name="text_scene_vegetable_desc">保持蔬菜内部高湿度，利于存储</string>
    <string name="text_scene_fruit_desc">降低水果酶的活性，延缓呼吸代谢，抑制细菌生长</string>
    <string name="text_scene_ort_desc">抑制亚硝酸盐的增长</string>
    <string name="text_scene_egg_desc">延长鸡蛋的保质期，可达40天</string>
    <string name="text_scene_ice_beer_desc">适合冷藏冰啤</string>
    <string name="text_scene_fresh_beer_desc">适合冷藏鲜啤</string>
    <string name="text_scene_warm_beer_desc">适合暖啤</string>
    <string name="text_scene_fish_desc">便于保留鱼的鲜美味道</string>
    <string name="text_scene_tea_desc">适合保留茶叶原有的色泽和香味</string>
    <string name="text_scene_mask_desc">更好锁住面膜的营养，利于吸收</string>
    <string name="text_scene_ice_cream_desc">保持雪糕的最佳口感</string>
    <string name="text_scene_breast_milk_desc">冰箱不常开门的话，最就可保存长达6个月哦</string>
    <string name="text_wakeup_tips">您好，呼叫“小鲜小鲜”、“云米冰箱”或“冰箱冰箱”可以唤醒我哦</string>
    <string name="text_not_wakeup_tips">您好，开启智能语音功能，可以跟小鲜对话哦</string>
    <string name="title_scene_set_title">变温室场景设置</string>
    <string name="title_scene_choose">显示区</string>
    <string name="title_scene_alternative">备选区</string>
    <string name="button_save">保存</string>
    <string name="toast_max_scene_arrive">亲，最多展示六种场景哈</string>
    <string name="toast_min_scene_arrive">亲，最少选择两种场景哦~</string>
    <string name="text_filter_remain">滤芯剩余：</string>
    <string name="title_you_can_talk">你可以这样对“我”说：</string>
    <string name="button_i_know">知道了</string>
    <string name="button_not_tips">不再提示</string>
    <string name="title_door_open_alert">冰箱门已开启，请尽早关闭哦</string>
    <string name="title_door_open_tiem">开启时长:</string>
    <string name="net_error">当前的网络不太好</string>
    <string name="try_again">重试</string>
    <string name="management_login_retry">重新获取</string>
    <string name="management_login_error_tip">登录超时，请重新扫码</string>
    <string name="management_no_login">未登录</string>
    <string name="management_account">云米账号：%1$s</string>
    <string name="management_logout_message">您确认退出登录吗？</string>
    <string name="management_login_success">登录成功</string>
    <string name="management_login_in">登录中…</string>
    <string name="management_logout_fail">注销登录失败</string>
    <string name="login_guide_title">登录指引</string>
    <string name="home_room_cold">冷藏室</string>
    <string name="home_room_cc">冷藏变温区</string>
    <string name="home_room_changeable">变温室</string>
    <string name="home_room_freezing">冷冻室</string>
    <string name="iot_fan_natural">自然风</string>
    <string name="iot_fan_standard">标准风</string>
    <string name="iot_fan_saving">节能风</string>
    <string name="iot_wash_dish_standar">标准洗</string>
    <string name="iot_wash_dish_economic">经济洗</string>
    <string name="iot_wash_dish_fast">快速洗</string>
    <string name="iot_wash_dish_custom">自定义</string>
    <string name="iot_wash_dish_salt_no">无盐</string>
    <string name="iot_wash_dish_salt_yes">有盐</string>
    <string name="iot_wash_dish_ldj_no">无亮碟剂</string>
    <string name="iot_wash_dish_ldj_yes">有亮碟剂</string>
    <string name="iot_range_hood_pm">PM2.5</string>
    <string name="iot_range_hood_setting">设置</string>
    <string name="iot_range_hood_using">使用中</string>
    <string name="iot_range_hood_stove_no_link">燃气灶未连接</string>
    <string name="iot_range_hood_stove_no_running">烟灶未联动</string>
    <string name="iot_range_hood_stove_running">烟灶联动中</string>
    <string name="iot_range_hood_stove_closed">燃气灶已关闭</string>
    <string name="iot_range_hood_stove_fire_low">小火</string>
    <string name="iot_range_hood_stove_fire_heavy">大火</string>
    <string name="iot_range_hood_closed">油烟机已关闭</string>
    <string name="iot_range_hood_closing_delay">延时关机中</string>
    <string name="iot_range_hood_free">空闲中</string>
    <string name="iot_range_hood_close">关闭</string>
    <string name="iot_range_hood_low_desc">低挡排烟模式</string>
    <string name="iot_range_hood_high_desc">高挡排烟模式</string>
    <string name="iot_range_hood_fry_desc">"爆炒排烟模式"</string>
    <string name="iot_range_hood_running_time">运行时间</string>
    <string name="iot_range_hood_running_count">运行次数</string>
    <string name="iot_range_hood_purification_quantity">净化量(m³)</string>
    <string name="iot_range_hood_air_quality">空气质量</string>
    <string name="iot_range_hood_power">开关</string>
    <string name="iot_range_hood_low">低挡</string>
    <string name="iot_range_hood_high">高挡</string>
    <string name="iot_range_hood_fry">爆炒</string>
    <string name="iot_range_hood_light">灯光</string>
    <string name="iot_range_hood_air_good">优</string>
    <string name="iot_range_hood_air_better">良</string>
    <string name="iot_range_hood_air_poor_1">轻度污染</string>
    <string name="iot_range_hood_air_poor_2">中度污染</string>
    <string name="iot_range_hood_air_poor_3">重度污染</string>
    <string name="iot_range_hood_air_poor_4">严重污染</string>
    <string name="iot_camera_loading">加载中…</string>
    <string name="iot_camera_offline">设备已离线</string>
    <string name="iot_please_look_forward">敬请期待</string>
    <string name="iot_add_no_txt">还未添加</string>
    <string name="iot_water_purifier_tds">净化后 TDS</string>
    <string name="iot_water_purifier_water_temp">自来水水温</string>
    <string name="iot_water_purifier_water_temp_value">%1$d℃</string>
    <string name="iot_water_purifier_uv">UV杀菌</string>
    <string name="iot_water_purifier_uv_working">杀菌中</string>
    <string name="iot_water_purifier_uv_free">空闲中</string>
    <string name="iot_water_purifier_water_rationing">制水状态</string>
    <string name="iot_water_purifier_water_rationing_working">制水中</string>
    <string name="iot_water_purifier_water_rationing_free">空闲中</string>
    <string name="iot_water_purifier_water_gage">水压</string>
    <string name="iot_water_purifier_water_gage_value">%1$1.1fMpa</string>
    <string name="iot_water_purifier_water_switch">智能三通阀</string>
    <string name="iot_water_purifier_water_switch_open">开启</string>
    <string name="iot_water_purifier_water_switch_close">关闭</string>
    <string name="iot_water_purifier_filter_pp">PP棉滤芯</string>
    <string name="iot_water_purifier_filter_pp_remain">PP棉滤芯剩余</string>
    <string name="iot_water_purifier_filter_pp_desc">去除泥沙、铁锈等大颗粒</string>
    <string name="iot_water_purifier_filter_pp_desc1">●\u0020\u0020\u0020对自来水进行第一级过滤，滤除泥沙、铁锈、纤维等肉眼可见物。</string>
    <string name="iot_water_purifier_filter_pp_desc2">●\u0020\u0020\u0020前置预处理，滤除相对粒径较大的杂质与颗粒，保护反渗透滤芯，避免反渗透膜污堵。</string>
    <string name="iot_water_purifier_filter_front">前置活性炭滤芯</string>
    <string name="iot_water_purifier_filter_front_remain">前置活性炭滤芯剩余</string>
    <string name="iot_water_purifier_filter_front_desc">去除水中异味，有效吸附余氯等</string>
    <string name="iot_water_purifier_filter_front_desc1">●\u0020\u0020\u0020对自来水进行第二级过滤，吸附水中的异色、异味、余氯及部分有机物。</string>
    <string name="iot_water_purifier_filter_front_desc2">●\u0020\u0020\u0020前置预处理，吸附余氯等物质，保护反渗透滤芯，防止反渗透膜氧化损坏。</string>
    <string name="iot_water_purifier_filter_ro">RO反渗透滤芯</string>
    <string name="iot_water_purifier_filter_ro_remain">RO反渗透滤芯剩余</string>
    <string name="iot_water_purifier_filter_ro_desc">去除抗生素、有机物、重金属和细菌等</string>
    <string name="iot_water_purifier_filter_ro_desc1">●\u0020\u0020\u0020对自来水进行第三级过滤，滤除水中的重金属、细菌、水垢、有机物等杂质。</string>
    <string name="iot_water_purifier_filter_ro_desc2">●\u0020\u0020\u0020理论过滤精度可达0.0001微米，其使用寿命和去除效果受当地水质、用户使用习惯及前两级滤芯的处理能力的影响。</string>
    <string name="iot_water_purifier_filter_ro_desc3">●\u0020\u0020\u0020采用美国陶氏/GE进口RO膜，对自来水进行更精细的过滤，有效滤除水中的重金属、细菌、病毒、抗生素、水垢、有机物等杂质，理论过滤精度可达0.0001微米。</string>
    <string name="iot_water_purifier_filter_behind">后置活性炭滤芯</string>
    <string name="iot_water_purifier_filter_behind_remain">后置活性炭滤芯剩余</string>
    <string name="iot_water_purifier_filter_behind_desc">进一步改善口感</string>
    <string name="iot_water_purifier_filter_behind_desc1">●\u0020\u0020\u0020对反渗透滤芯生产的纯水进行深度净化，吸附异味，改善口感。</string>
    <string name="iot_water_purifier_filter_behind_desc2">●\u0020\u0020\u0020纯水的后置处理滤芯，寿命到期后不更换可能会影响口感，甚至滋生细菌。</string>
    <string name="iot_water_purifier_filter_intelligence">智能3合1滤芯</string>
    <string name="iot_water_purifier_filter_intelligence_remain">智能3合1滤芯剩余</string>
    <string name="iot_water_purifier_filter_intelligence_desc">以一抵三、高效过滤、更换简单</string>
    <string name="iot_water_purifier_filter_intelligence_desc2">●\u0020\u0020\u0020折叠PP滤芯|精选优质折叠PP滤材，过滤面积更大，孔径均匀，纳污量大，利用率更高，使用寿命长一倍，有效滤除泥沙、铁锈等大颗粒杂质；</string>
    <string name="iot_device_air_purifier">空气净化器</string>
    <string name="fridge_room_cold">冷藏室</string>
    <string name="fridge_room_changeable">变温室</string>
    <string name="fridge_room_freezing">冷冻室</string>
</resources>