<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:id="@+id/message_text"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:textSize="20dp"
        android:text="@string/text_confirm_filter_reset"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/cancel_button"
            android:background="@drawable/button_common_border"
            android:layout_width="120dp"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/control_enable_color"
            android:text="@string/button_cancel"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginLeft="60dp"
            android:id="@+id/confirm_button"
            android:background="@drawable/button_common_border"
            android:text="@string/button_ok"
            android:textSize="20dp"
            android:textColor="@color/control_enable_color"
            android:gravity="center"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>