<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <TextView
            android:text="@string/title_scene_set_title"
            android:textSize="18sp"
            android:textColor="@color/lightgray"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/scene_colse"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@mipmap/icon_close"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="40dp"
            android:layout_height="40dp" />
    </RelativeLayout>
    <TextView
        android:text="@string/title_scene_choose"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/scene_choose_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>
    <TextView
        android:text="@string/title_scene_alternative"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/scene_alternative_list"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/scene_save"
        android:background="@drawable/button_common_border"
        android:textColor="@color/control_enable_color"
        android:text="@string/button_save"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>